# ros_bim_stack

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  run_tests.sh
bim_interfaces/: CMakeLists.txt  package.xml
bim_interfaces/msg/: BimObject.msg  BimPartition.msg  Property.msg
bim_interfaces/srv/: FetchStream.srv  QueryBim.srv
doc/: PLUGIN_MIGRATION.md  api.md  configuration.md  deployment.md  development.md  extending.md  installation.md  plugins.md  troubleshooting.md  usage.md
examples/gazebo_integration/: .env.example  .gitignore  README.md  README_HEADLESS.md  docker-compose.yml  run_demo.sh
examples/gazebo_integration/config/: cyclonedds.xml  gazebo_params.yaml  plugins.yaml
examples/gazebo_integration/ros_speckle_gazebo/: __init__.py  gazebo_spawner.py
ros_speckle_bridge/: Dockerfile  docker-compose.yml  package.xml  setup.cfg  setup.py
ros_speckle_bridge/config/: params.example.yaml  plugins.yaml.example
ros_speckle_bridge/launch/: bridge.launch.py
ros_speckle_bridge/resource/: ros_speckle_bridge
ros_speckle_bridge/ros_speckle_bridge/: __init__.py  bridge_node.py  cache_manager.py  converter.py  list_streams.py  speckle_client.py
ros_speckle_bridge/ros_speckle_bridge/plugins/: __init__.py  base.py  loader.py  mesh_exporter.py
ros_speckle_bridge/rviz/: default.rviz
ros_speckle_bridge/tests/: test_converter.py  test_integration.py  test_live.py
ros_speckle_bridge/tests/mock_data/: sample_response.json
scripts/: run_tests.sh  validate_plugins.py
